[package]
name = "hiss"
version = "0.0.0"
authors = ["Luc Street <lucis-fluxum@users.noreply.github.com>"]
description = "..."
repository = "https://github.com/lucis-fluxum/hiss-rs"
license = "MIT"
edition = "2018"

[dependencies]
pubgrub = "0.2.0"
# reqwest = { version = "0.10.9", default-features = false, features = ["blocking", "json", "rustls-tls"] }
# serde_json = "1.0.59"
